Versão Amazon Lightsail (24/11)

--- a/FraudDetection.ipynb
+++ b/FraudDetection.ipynb
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 20,
    "id": "436aa121-94d4-4d57-886b-408e8713a792",
    "metadata": {},
    "outputs": [
@@ -450,7 +450,7 @@
        "<IPython.core.display.Markdown object>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,6 +458,34 @@
    "source": [
     "Markdown(f\"##### Nas compras fraudulentas a distância média entre origem e destino é de {distancia_fraudes:,.2f} km,\\\n",
     " em contrapartida, compras legítimas tem uma distância média de {distancia_legitimas:,.2f} km. \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "def487b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "##### **Número de fraudes por canal de compra:**\n",
+       " ##### O total de fraudes em compras feitas pela WEB é de `5426` --> (78.14% do total de fraudes),          enquanto que compras pelo APP totalizam `1186` fraudes (21.86% do total)."
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fraude_por_canal = dataset.loc[dataset['is_fraud']==1].groupby('channel')['is_fraud'].count().reset_index().sort_values(by='is_fraud', ascending=False)\n",
+    "prob = fraude_por_canal.loc[0, 'is_fraud'] / fraude_por_canal.loc[1, 'is_fraud']\n",
+    "Markdown(f\"##### **Número de fraudes por canal de compra:**\\n ##### O total de fraudes em compras feitas pela {fraude_por_canal.loc[1, 'channel'].upper()} é de `{fraude_por_canal.loc[1, 'is_fraud']}` --> ({100 - prob.round(4) *100}% do total de fraudes),\\\n",
+    "          enquanto que compras pelo {fraude_por_canal.loc[0, 'channel'].upper()} totalizam `{fraude_por_canal.iloc[1, 1]}` fraudes ({prob.round(4) *100}% do total).\" )\n"
    ]
   },
   {
@@ -7161,16 +7189,16 @@
     "| Item                          | Resultado Final - Insights                                                                 |\n",
     "|----------------------------------------------------------------|--------------------------------------------------------------------------------------|\n",
     "| Melhor Modelo Encontrado                           | LGBM Classifier com Otimização Bayesiana                                           |\n",
-    "| Melhor F1-Score                                    | 90.3%                                                                              |\n",
+    "| Melhor F1-Score                                    | Média ponderada entre Precisão e Recall -> 90.3%                                                                              |\n",
     "| Precisão (Classe Fraude)                           | 90% das transações sinalizadas como fraudes, eram de fato, fraudes                 |\n",
     "| Recall (Classe Fraude)                             | 88% das fraudes foram corretamente detectadas pelo modelo                          |\n",
-    "| Principais Features                                | canal de compra, distancia do envio em km, verificacao de endereco, idade da conta em dias        |\n",
-    "| Feature Crítica Identificada                       | idade_conta_dias → contas novas têm maior risco                                    |\n",
+    "| Principais Features                                | canal de compra, distancia do envio em km, verificacao de endereco, idade da conta em dias, valor médio de compra do cliente        |\n",
+    "| Features Críticas Identificadas                    | idade_conta_dias → contas novas têm maior risco --- canal -> Aproximadamente 4/5 das fraudes acontecem na WEB |\n",
     "| Falsos Positivos                                   | 312 transações legítimas classificadas como fraude                                 |\n",
     "| Falsos Negativos                                   | 383 fraudes não detectadas                                                         |\n",
     "| Recomendação Técnica                               | Ajustar limiar de decisão de acordo com o prejuízo causado pelas fraudes           |\n",
-    "| Limiar atual                                       | Considera transações com 30 % de probabilidade de fraude, como fraude              |\n",
-    "| Recomendação Estratégica                           | Monitorar contas novas com baixa atividade; reforçar validações de endereço        |\n",
+    "| Limiar atual                                       | Considera transações com 30% de probabilidade de fraude, como fraude               |\n",
+    "| Recomendação Estratégica                           | Monitorar contas novas com baixa atividade; reforçar validações de endereço, oferecer benefícios exclusivos para migração para o APP |\n",
     "| Aplicabilidade                                     | Pronto para integração em sistemas antifraude com monitoramento em tempo real      |\n"
    ]
   },
@@ -7224,17 +7252,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "06644ccf-0f18-4010-9936-26263bf0a1bc",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Interpretação e recomendação final para equipe de risco\n",
+    "\n",
+    "**🔵 O modelo supera amplamente a linha de base, com desempenho robusto mesmo em limiares de decisão ajustados dinamicamente.**\n",
+    "- ⚙️ Estratégia de Limiar Dinâmico\n",
+    "1) - O limiar de decisão do modelo pode ser ajustado conforme o valor da transação:\n",
+    "2) - Transações altas → limiar mais baixo **(ex:. uma probabilidade de 20% pode ser considerada como fraude)** →Resultado: maior recall (captura mais fraudes)\n",
+    "3) - Transações baixas → limiar mais alto **(ex:. somente transações como uma probabilidade de fraude superior a 70% são sinalizadas)** → maior precisão (menos alarmes falsos )\n",
+    "4) - Essa abordagem equilibra risco financeiro e custo operacional, priorizando alertas em transações mais críticas.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a3fef6b",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "ambiente_torch",
    "language": "python",
    "name": "python3"
   },
